--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.7.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
+    "react-toastify": "^11.0.3",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
